# Image-Processor

./: CMakeCache.txt  CMakeLists.txt  Makefile  bmpformat.cpp  bmpformat.h  bmpreader.cpp  bmpreader.h  bmpwriter.cpp  bmpwriter.h  cmake_install.cmake  color.cpp  color.h  compile_commands.json  consoleoutput.cpp  consoleoutput.h  filter.h  filtercrop.cpp  filtercrop.h  filteredgedetection.cpp  filteredgedetection.h  filtergaussianblur.cpp  filtergaussianblur.h  filtergrayscale.cpp  filtergrayscale.h  filternegative.cpp  filternegative.h  filtersharpening.cpp  filtersharpening.h  image.cpp  image.h  image_processor  image_processor.cpp  matrixfilter.cpp  matrixfilter.h  parserargv.cpp  parserargv.h  pixelfilter.cpp  pixelfilter.h  readme.md
